2004-01-07  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* configure.in, configure.vms, src/fit.c, src/gplt_x11.c, src/stdfn.h,
	term/ggi.trm, term/x11.trm: Use AC_FUNC_SELECT_ARGTYPES instead of
	AC_FUNC_SELECT and related changes.

	* config/config.amg: Updated.

	* docs/gnuplot.doc: Removed whitespace-only line as pointed out by
	"make check".

	* m4/apple.m4, m4/beos.m4, m4/msdos.m4, m4/next.m4: Newer autoconf
	versions require stricter quoting.

2004-01-07  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* term/x11.trm (X11_args) [!USE_MOUSE]: Don't try to parse
	"-nofeedback" option if mousing disabled.

	* src/command.c (test_palette_subcommand, test_time_subcommand):
	Made static; added missing local prototype.
	(test_palette_subcommand): Changed static const int "colors" to an
	enum to make it eligible as an array size under C90.  Renamed to
	"test_palette_colors" to avoid global name space contamination.
	Made several local string constant variables 'static', and removed
	a superfluous one. Reindented.

2004-01-06  Lars Hecking  <lhecking@nmrc.ucc.ie>

	* demo/Makefile.am.in: Add webify.pl to distribution.

2004-01-01  Ethan Merritt  <merritt@u.washington.edu>

	* configure.in: Fix incorrect nesting of libpdf status test.

2003-12-29  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/util3d.c (polyline3d_next): Bugfix. The patch on 2003-12-19
	broke contouring in hidden3d mode.  polyline3d_previous_vertex
	wasn't updated.

2003-12-26  Jim Van Zandt  <jrv@debian.org>

	* src/set.c (load_tic_user): user tic definition can have 3rd
	token specifying minitic

	* src/axis.h: ticmark.level specifies major or minitic

	* src/axis.c (gen_tics): Request user-supplied minitics

	* docs/gnuplot.doc: document user-supplied minitics

2003-12-24  Ethan Merritt  <merritt@u.washington.edu>

	* src/show.c: Fix buffer overflow in conv_text() if the text
	contains many characters with the high bit set.
